# nostr_sdk

./: .gitignore  LICENSE  README.md  analysis_options.yaml  ffigen.yaml  pubspec.yaml
android/: build.gradle
android/src/main/: AndroidManifest.xml
example/: pubspec.yaml
example/android/app/: build.gradle
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/runner/: Runner.rc
ffi_plugin/: Cargo.toml  Makefile.toml  build.rs  ffi_plugin.h
ffi_plugin/src/: common.rs  keys.rs  lib.rs  memory_management.rs  validation_utils.rs
ffi_plugin/src/keys/: public_key.rs  secret_key.rs
ios/: nostr_sdk.podspec
lib/: common.dart  ffi_bindings.dart  nostr_sdk.dart  nostr_sdk_bindings_generated.dart  validation_utils.dart
lib/nostr/event/kind/: kind.dart  kind.freezed.dart  kind.g.dart
lib/nostr/key/: keys.dart  public_key.dart  secret_key.dart
lib/nostr/types/entity/: entity.dart  entity.freezed.dart  entity.g.dart
linux/: CMakeLists.txt
macos/: libffi_plugin.dylib  nostr_sdk.podspec
macos/Classes/: nostr_sdk.c
src/: CMakeLists.txt  nostr_sdk.c
test/: validation_utils_test.dart
test/nostr/event/: kind_test.dart
test/nostr/key/: keys_test.dart  public_key_test.dart  secret_key_test.dart
test/nostr/types/: entity_test.dart  metadata_test.dart  time_test.dart
windows/: CMakeLists.txt
(+8 files in other folders)
